[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sudoku/Scripts/SudokuScene/DrawGrid.gd" type="Script" id=1]
[ext_resource path="res://Music/EndGame/Untitled.mp3" type="AudioStream" id=2]
[ext_resource path="res://Sudoku/Scripts/SudokuScene/PlayerInput.gd" type="Script" id=3]
[ext_resource path="res://Sudoku/Scripts/SudokuScene/SudokuControlNode.gd" type="Script" id=4]
[ext_resource path="res://Sudoku/Scripts/SudokuScene/PuzzleCompleted.gd" type="Script" id=5]
[ext_resource path="res://Sudoku/Scripts/CreateCustomGame.gd" type="Script" id=6]

[sub_resource type="Theme" id=2]

[node name="Sudoku" type="Control"]
script = ExtResource( 4 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 137.0
margin_bottom = 133.0

[node name="DrawGrid" type="Control" parent="BackgroundColor" groups=["DrawGridGroup"]]
anchor_left = -0.008
anchor_top = -0.007
anchor_right = 0.001
anchor_bottom = -0.001
margin_left = 7.64
margin_top = 10.44
margin_right = -1.08
margin_bottom = 1.92
script = ExtResource( 1 )

[node name="MenuLandscape" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLandscape"]
margin_left = 20.0
margin_top = 1235.0
margin_right = 724.0
margin_bottom = 1235.0

[node name="PlayerInput" type="Control" parent="MenuLandscape/VBoxContainer"]
margin_right = 704.0

[node name="ButtonContainer" type="GridContainer" parent="MenuLandscape"]
margin_left = 709.0
margin_top = 1233.0
margin_right = 1006.0
margin_bottom = 1869.0

[node name="Create" type="Button" parent="MenuLandscape/ButtonContainer"]
visible = false
margin_right = 297.0
margin_bottom = 132.0
theme = SubResource( 2 )
text = "Create"
script = ExtResource( 6 )

[node name="Undo" type="Button" parent="MenuLandscape/ButtonContainer"]
margin_right = 248.0
margin_bottom = 132.0
theme = SubResource( 2 )
text = "Undo"

[node name="Redo" type="Button" parent="MenuLandscape/ButtonContainer"]
margin_top = 136.0
margin_right = 248.0
margin_bottom = 268.0
theme = SubResource( 2 )
text = "Redo"

[node name="Validate" type="Button" parent="MenuLandscape/ButtonContainer"]
visible = false
margin_top = 272.0
margin_right = 275.0
margin_bottom = 404.0
theme = SubResource( 2 )
text = "Check"

[node name="Pencil" type="Button" parent="MenuLandscape/ButtonContainer"]
margin_top = 272.0
margin_right = 248.0
margin_bottom = 404.0
theme = SubResource( 2 )
text = "Pen"

[node name="Clear" type="Button" parent="MenuLandscape/ButtonContainer"]
margin_top = 408.0
margin_right = 248.0
margin_bottom = 540.0
theme = SubResource( 2 )
text = "Clear"

[node name="PuzzleCompleted" type="Button" parent="MenuLandscape"]
visible = false
margin_left = 78.0
margin_top = 567.0
margin_right = 998.0
margin_bottom = 901.0
text = "Completed"
script = ExtResource( 5 )

[node name="IsSudokuValid" type="Button" parent="MenuLandscape"]
visible = false
margin_left = 20.0
margin_top = 1070.0
margin_right = 1060.0
margin_bottom = 1220.0
theme = SubResource( 2 )

[node name="MenuPortrait" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPortrait"]
margin_left = 20.0
margin_top = 1235.0
margin_right = 724.0
margin_bottom = 1235.0

[node name="PlayerInput" type="Control" parent="MenuPortrait/VBoxContainer"]
margin_right = 704.0
script = ExtResource( 3 )

[node name="ButtonContainer" type="GridContainer" parent="MenuPortrait"]
margin_left = 709.0
margin_top = 1233.0
margin_right = 1006.0
margin_bottom = 1869.0

[node name="Create" type="Button" parent="MenuPortrait/ButtonContainer"]
visible = false
margin_right = 297.0
margin_bottom = 132.0
theme = SubResource( 2 )
text = "Create"
script = ExtResource( 6 )

[node name="Undo" type="Button" parent="MenuPortrait/ButtonContainer"]
margin_right = 46.0
margin_bottom = 20.0
theme = SubResource( 2 )
text = "Undo"

[node name="Redo" type="Button" parent="MenuPortrait/ButtonContainer"]
margin_top = 24.0
margin_right = 46.0
margin_bottom = 44.0
theme = SubResource( 2 )
text = "Redo"

[node name="Validate" type="Button" parent="MenuPortrait/ButtonContainer"]
visible = false
margin_top = 272.0
margin_right = 275.0
margin_bottom = 404.0
theme = SubResource( 2 )
text = "Check"

[node name="Pencil" type="Button" parent="MenuPortrait/ButtonContainer"]
margin_top = 48.0
margin_right = 46.0
margin_bottom = 68.0
theme = SubResource( 2 )
text = "Note"

[node name="Clear" type="Button" parent="MenuPortrait/ButtonContainer"]
margin_top = 72.0
margin_right = 46.0
margin_bottom = 92.0
theme = SubResource( 2 )
text = "Clear"

[node name="PuzzleCompleted" type="Button" parent="MenuPortrait"]
visible = false
margin_left = 78.0
margin_top = 567.0
margin_right = 998.0
margin_bottom = 901.0
text = "Completed"
script = ExtResource( 5 )

[node name="IsSudokuValid" type="Button" parent="MenuPortrait"]
visible = false
margin_left = 20.0
margin_top = 1070.0
margin_right = 1060.0
margin_bottom = 1220.0
theme = SubResource( 2 )

[node name="PuzzleCompleteSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="button_up" from="MenuLandscape/ButtonContainer/Create" to="MenuLandscape/ButtonContainer/Create" method="_on_CreateCustomGame_button_up"]
[connection signal="button_up" from="MenuLandscape/ButtonContainer/Undo" to="BackgroundColor/DrawGrid" method="_on_Undo_button_up"]
[connection signal="button_up" from="MenuLandscape/ButtonContainer/Redo" to="BackgroundColor/DrawGrid" method="_on_Redo_button_up"]
[connection signal="button_up" from="MenuLandscape/ButtonContainer/Validate" to="BackgroundColor/DrawGrid" method="_on_Validate_button_up"]
[connection signal="button_up" from="MenuLandscape/ButtonContainer/Pencil" to="MenuLandscape/VBoxContainer/PlayerInput" method="_on_Pencil_button_up"]
[connection signal="button_up" from="MenuLandscape/ButtonContainer/Clear" to="BackgroundColor/DrawGrid" method="_on_Clear_button_up"]
[connection signal="button_up" from="MenuLandscape/PuzzleCompleted" to="MenuLandscape/PuzzleCompleted" method="_on_PuzzleCompleted_button_up"]
[connection signal="button_up" from="MenuPortrait/ButtonContainer/Create" to="MenuPortrait/ButtonContainer/Create" method="_on_CreateCustomGame_button_up"]
[connection signal="button_up" from="MenuPortrait/ButtonContainer/Undo" to="BackgroundColor/DrawGrid" method="_on_Undo_button_up"]
[connection signal="button_up" from="MenuPortrait/ButtonContainer/Redo" to="BackgroundColor/DrawGrid" method="_on_Redo_button_up"]
[connection signal="button_up" from="MenuPortrait/ButtonContainer/Validate" to="BackgroundColor/DrawGrid" method="_on_Validate_button_up"]
[connection signal="button_up" from="MenuPortrait/ButtonContainer/Pencil" to="MenuPortrait/VBoxContainer/PlayerInput" method="_on_Pencil_button_up"]
[connection signal="button_up" from="MenuPortrait/ButtonContainer/Clear" to="BackgroundColor/DrawGrid" method="_on_Clear_button_up"]
[connection signal="button_up" from="MenuPortrait/PuzzleCompleted" to="MenuPortrait/PuzzleCompleted" method="_on_PuzzleCompleted_button_up"]
